Add: 譜面の削除処理

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,7 +2,7 @@ ja:
   activerecord:
     models:
       user: 'ユーザー'
-      sheet: '掲示板'
+      sheet: '譜面'
     attributes:
       user:
         email: 'メールアドレス'
