Fix: 練習曲作成処理の見直し

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -15,6 +15,7 @@ ja:
     password_reset: 'パスワードリセット'
     unspecified: '指定なし'
     level: 'レベル'
+    tempo: 'テンポ'
     make_music: '曲を作成する'
     message:
       require_login: 'ログインしてください'
