Fix: 日本語化対応の漏れ修正

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -12,6 +12,7 @@ ja:
     audition: '試聴する'
     play: '再生'
     stop: '停止'
+    untitled: '無題'
     password_reset: 'パスワードリセット'
     unspecified: '指定なし'
     level: 'レベル'
