Fix: levelについてenumを使用して日本語化するように修正

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -25,3 +25,10 @@ ja:
       embed_type:
         not_embed: '無し'
         youtube: 'YouTube'
+    sheet:
+      level:
+        level1: 'レベル1'
+        level2: 'レベル2'
+        level3: 'レベル3'
+        level4: 'レベル4'
+        level5: 'レベル5'
