Fix: Sheetのシステムスペック修正とNG箇所のコード修正

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -27,6 +27,8 @@ ja:
       require_login: 'ログインしてください'
       created: "%{item}を作成しました"
       not_created: "%{item}を作成できませんでした"
+      saved: "%{item}を保存しました"
+      not_saved: "%{item}を保存できませんでした"
       updated: "%{item}を更新しました"
       not_updated: "%{item}を更新できませんでした"
       deleted: "%{item}を削除しました"
