Add: パスワードリセット機能の実装

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -26,6 +26,7 @@ ja:
     comment_count: 'コメント数'
     embedded_content: '埋め込みコンテンツ'
     mml: 'MML'
+    password_reset: 'パスワードリセット'
     message:
       require_login: 'ログインしてください'
       created: "%{item}を作成しました"
@@ -74,6 +75,17 @@ ja:
       title: '登録情報'
     edit:
       title: '登録情報編集'
+  password_resets:
+    new:
+      title: 'パスワードリセット申請'
+      submit: '送信'
+    edit:
+      title: 'パスワードリセット'
+    create:
+      success: 'パスワードリセット手順を送信しました'
+    update:
+      success: 'パスワードを変更しました'
+      fail: 'パスワードの変更に失敗しました'
 
   admin:
     admin_screen: '管理画面'
